--- a/kubemarine/templates/haproxy.cfg.j2
+++ b/kubemarine/templates/haproxy.cfg.j2
@@ -1,5 +1,7 @@
 global
     log                 127.0.0.1 local2 debug
+    user haproxy
+    group haproxy
 
 defaults
     log                 global
