[MANOPD-85605][MANOPD-85606] Fix template nginx-ingress-controller-v1.4.yaml.j2 (#372)
* Fix template nginx-ingress-controller-v1.4.yaml.j2

* remove publish-service flag at nginx-ingress-controller

* Implement patch to fix ingress-nginx using new template

* Auto-update license header

---------

Co-authored-by: ilia1243 <8808144+ilia1243@users.noreply.github.com>
Co-authored-by: ilia1243 <ilia1243@users.noreply.github.com>

--- a/kubemarine/templates/plugins/nginx-ingress-controller-v1.4.yaml.j2
+++ b/kubemarine/templates/plugins/nginx-ingress-controller-v1.4.yaml.j2
@@ -51,6 +51,7 @@ data:
 ---
 apiVersion: v1
 data:
+  allow-snippet-annotations: "true"
 {% if plugins['nginx-ingress-controller']['config_map'] is defined -%}
   {{ plugins['nginx-ingress-controller']['config_map'] | toyaml | indent(width=2, first=True) -}}
 {%- endif %}
@@ -61,7 +62,7 @@ metadata:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.2.0
+    app.kubernetes.io/version: 1.4.0
   name: ingress-nginx-controller
   namespace: ingress-nginx
 ---
@@ -368,20 +369,6 @@ subjects:
   namespace: ingress-nginx
 ---
 apiVersion: v1
-data:
-  allow-snippet-annotations: "true"
-kind: ConfigMap
-metadata:
-  labels:
-    app.kubernetes.io/component: controller
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/version: 1.4.0
-  name: ingress-nginx-controller
-  namespace: ingress-nginx
----
-apiVersion: v1
 kind: Service
 metadata:
   labels:
@@ -466,11 +453,11 @@ spec:
       containers:
       - args:
         - /nginx-ingress-controller
-        - --publish-service=$(POD_NAMESPACE)/ingress-nginx-controller
         - --election-id=ingress-controller-leader
         - --controller-class=k8s.io/ingress-nginx
         - --ingress-class=nginx
         - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller
+        - --watch-ingress-without-class=true
         {% if plugins['nginx-ingress-controller']['controller']['ssl']['enableSslPassthrough'] is true -%}
         - --enable-ssl-passthrough
         {%- endif %}
@@ -585,8 +572,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: {% if plugins['nginx-ingress-controller']['installation']['registry'] is defined and plugins['nginx-ingress-controller']['installation']['registry']|length %}{{
-        plugins['nginx-ingress-controller']['installation']['registry'] }}/{% endif %}{{ plugins['nginx-ingress-controller']['webhook']['image'] }}
+        image: {% if plugins['nginx-ingress-controller']['installation']['registry'] is defined and plugins['nginx-ingress-controller']['installation']['registry']|length %}{{ plugins['nginx-ingress-controller']['installation']['registry'] }}/{% endif %}{{ plugins['nginx-ingress-controller']['webhook']['image'] }}
         imagePullPolicy: IfNotPresent
         name: create
         securityContext:
@@ -660,6 +646,8 @@ metadata:
     app.kubernetes.io/part-of: ingress-nginx
     app.kubernetes.io/version: 1.4.0
   name: nginx
+  annotations:
+    ingressclass.kubernetes.io/is-default-class: "true"
 spec:
   controller: k8s.io/ingress-nginx
 ---
