--- a/kubemarine/templates/haproxy.cfg.j2
+++ b/kubemarine/templates/haproxy.cfg.j2
@@ -2,6 +2,7 @@ global
     log                 127.0.0.1 local2 debug
     user haproxy
     group haproxy
+    maxconn             10000
 
 defaults
     log                 global
